# glimmer-cism-glimmer-tests

./: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  bootstrap  configure.in  make.rules
EISMINT-1/: Makefile  Makefile.am  e1-fm.1.config  e1-fm.2.config  e1-fm.3.config  e1-mm.1.config  e1-mm.2.config  e1-mm.3.config
EISMINT-2/: Makefile  Makefile.am  e2.a.config  e2.b.config  e2.c.config  e2.d.config  e2.f.config  e2.g.config  e2.h.config  e2.i.config  e2.j.config  e2.k.config  e2.l.config
EISMINT-3-GL/: EISMINT3GL.input.nc  e3gl_steady.config
PyCF/: Makefile  Makefile.am  eismint.prof  fenscan.data
benchmarks/: Makefile.am  b1.config  b2.config  b3.config  b4.config  b5.config  b6.config
eis/: Makefile  Makefile.am  fenscan-gthf.config  fenscan.config
isos/: Makefile  Makefile.am  isos.elfa.config  isos.elra.config  isos.llfa.config  isos.llra.config
lin-non_lin/: Makefile  Makefile.am  l-10a.config  l-20a.config  l-30a.config  l-5a.config  nl-10a.config  nl-20a.config  nl-30a.config  nl-5a.config
